--- a/Lab notebook/LN01.md
+++ b/Lab notebook/LN01.md
@@ -15,22 +15,22 @@ To import and sort the 16S rRNA sequences based on barcode information in QIIME2
 3. Import and demultiplex the dysautonomia dataset using pair-end to create a qza file with
 demultiplexed samples 
 5. Create a visualization for the demultiplexed samples
-6. Move the demux.qzv file to your local computer directory and view it using the QIIME 2
+6. Move the demux.qzv file to your local computer directory and view it using the QIIME2
 
 ## Code: 
-[QIIME2 Code]()
+[QIIME2 Code](QIIME2-Analysis/QIIME2-Data-Processing-Script.txt)
 
 ## Output files:
-1. Path in server: /data/team6_dysautonomia_data/team6_dysautonomia_paired_demux_seqs.qza 
-2. Path in server: /data/team6_dysautonomia_data/team6_dysautonomia_paired_demux_seqs.qzv - [file](/QIIME2/Data_processing/export/paired_demux_seqs.qzv) is also uploaded to this repository
+1. Path in server: /HIV/demux.qza
+2. Path in server: /HIV/demux.qzv - [file](QIIME2-Analysis/Qiime-output-files/demux.qzv) is also uploaded to this repository
    
 ## Results: 
 The same result is generated from samples sequenced from both forward and reverse primers
-1. Total number of reads: 6531021 
-2. Total number of samples: 214
-3. Range of sequencing depth: 7440-114131
-4. Maximum read length (bp): 251
-5. All the reads the same length of 251 bp
+1. Total number of reads:  
+2. Total number of samples: 281
+3. Range of sequencing depth: 
+4. Maximum read length (bp): 
+5. All the reads the same length of  bp
 
 Sequence counts
 > <img src="..." height="200">
@@ -41,9 +41,7 @@ Sequence lengths
 Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
 
 ## Discussion:
-1. The maximum read depth (bp) was 251 while all 214 samples (the same number of samples using both forward and reverse primers) had 251 bp in length.
-2. After demultiplexing, the medians of the quality score for all bases were consistently high with a similar median value of 30, presenting over 99.9% base call accuracy. Hence, this suggests that there would be no trimming required. The truncation length selected was 251 bp.
-3. Samples sequenced using forward primers resulted in higher phred scores compared to that of the reverse primers, hence denoising step will use those amplified using forward primers
-
+1. The demultiplexed sequence summary visualized by QIIME2 indicated that our samples had read lengths ranging from 217 to 251 nucleotides (nts).
+2. Most of our samples had a read length of 251 nts (≥75%) while 9% and 2% were at 243 and 217 nts, respectively. The read quality for both 243 and 251 nts was reasonable (Figure 1). 
 ## Future direction:
-1. Denoise sequences using the selected truncation length of 251 bp and determine ASVs with DADA2 (outputs: team6_dysautonomia_table.qza, denoising-stats.qza) 
+1. Denoise sequences using the selected truncation length of either 243 or 251 bp and determine ASVs with DADA2
