--- a/Lab-notebook/LN04.md
+++ b/Lab-notebook/LN04.md
@@ -8,42 +8,31 @@ To remove samples less than 100 reads, ASVs < 5 counts, any mitochondrial or chl
 To rarefy the phlyoseq object to match with our general data processing step on QIIME2.
 
 ## Material: 
-1. QIIME2
-2. HIV_metadata.tsv (Path in server: /mnt/datasets/project_2/HIV)
+1. RStudio
+2. QIIME2 
+3. tree.nwk
+4. table-hiv.txt
+5. hiv_metadata.tsbv
+6. taxonomy.tsv
 
 ## Method:
 1. Connect to Cisco Anyconnect Secure VPN. Open the terminal and login to MICB 475 class server using the provided login credentials.
-2. Create a dedicated directory for project 2: /HIV
-3. Import and demultiplex the dysautonomia dataset using pair-end to create a qza file with
-demultiplexed samples 
-5. Create a visualization for the demultiplexed samples
-6. Move the demux.qzv file to your local computer directory and view it using the QIIME2
+2. Convert taxonomy, otu table, and phylogenic tree to appropriate format for RStudio use.
+3. Move the converted files to your local computer directory and view it using the QIIME2
+4. Convert files to phyloseq objects with appropriate filtering
+5. remove samples less than 100 reads, ASVs < 5 counts, mitochondrial/choloroplasts sequences, and remove NAs
+6. Rarefy phyloseq object to appropriate read length done in QIIME2 (12,082)
 
 ## Code: 
-[QIIME2 Code](QIIME2-Analysis/QIIME2-Data-Processing-Script.txt)
-
+[RStudio code](RStudio/Aim1/Phyloseq-conversion.Rmd)
+QIIME2 codes were applied from MICB 475 lecture
 ## Output files:
-1. Path in server: /HIV/demux.qza
-2. Path in server: /HIV/demux.qzv - [file](QIIME2-Analysis/Qiime-output-files/demux.qzv) is also uploaded to this repository
+Files are saved on Team OneDrive server
+GitHub:[HIV_final](RStudio/Aim1/hiv_final.RData)
+| [HIV_rare](RStudio/Aim1/hiv_rare.RData)
    
 ## Results: 
-The same result is generated from samples sequenced from both forward and reverse primers
-1. Total number of reads:  
-2. Total number of samples: 281
-3. Range of sequencing depth: 
-4. Maximum read length (bp): 
-5. All the reads the same length of  bp
-
-Sequence counts
-> <img src="..." height="200">
-
-Sequence lengths
-> <img src="..." height="300">
-
-Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
+* Phyloseq object is converted 
 
 ## Discussion:
-1. The demultiplexed sequence summary visualized by QIIME2 indicated that our samples had read lengths ranging from 217 to 251 nucleotides (nts).
-2. Most of our samples had a read length of 251 nts (≥75%) while 9% and 2% were at 243 and 217 nts, respectively. The read quality for both 243 and 251 nts was reasonable (Figure 1). 
-## Future direction:
-1. Denoise sequences using the selected truncation length of either 243 or 251 bp and determine ASVs with DADA2
+* Materials are now ready to perform alpha beta diversity analysis for aim 1
