--- a/Lab-notebook/LN04.md
+++ b/Lab-notebook/LN04.md
@@ -24,12 +24,12 @@ To rarefy the phlyoseq object to match with our general data processing step on 
 6. Rarefy phyloseq object to appropriate read length done in QIIME2 (12,082)
 
 ## Code: 
-* [RStudio code](RStudio/Aim1/Phyloseq-conversion.Rmd)
+* [RStudio code](/RStudio/Aim1/Phyloseq-conversion.Rmd)
 * QIIME2 codes were applied from MICB 475 lecture
 ## Output files:
 Files are saved on Team OneDrive server
-GitHub:[HIV_final](RStudio/Aim1/hiv_final.RData)
-| [HIV_rare](RStudio/Aim1/hiv_rare.RData)
+GitHub:[HIV_final](/RStudio/Aim1/hiv_final.RData)
+| [HIV_rare](/RStudio/Aim1/hiv_rare.RData)
    
 ## Results: 
 * Phyloseq object is converted 
