--- a/Lab-notebook/LN05.md
+++ b/Lab-notebook/LN05.md
@@ -1,6 +1,6 @@
 # LN05 - Alpha diversity for Education level, visit age, and labour type
 
-Feb 28th, 2025
+March 14, 2025
 
 ## Purpose:
 To import and convert metadata, phylogenetic tree, otu table, and taxonomy of HIV dataset to phyloseq object. 
