--- a/Lab-notebook/LN02.md
+++ b/Lab-notebook/LN02.md
@@ -8,8 +8,8 @@ To detect and fix any sequencing errors, and to cluster the sequences into respe
 
 ## Material: 
 1. QIIME2 
-2. team6_dysautonomia_paired_demux_seqs.qza (/data/team6_dysautonomia_data)
-3. dysautonomia_metadata.tsv (/mnt/datasets/project_2/dysautonomia)
+2. demux_seqs.qzv (/HIV)
+3. hiv_metadata.tsv (/mnt/datasets/project_2/hiv)
 
 
 ## Method:
@@ -21,9 +21,10 @@ To detect and fix any sequencing errors, and to cluster the sequences into respe
 
    
 ## Code: 
-* [QIIME2]
+*QIIME2-Analysis/QIIME2-Data-Processing-Script.R
 ## Output files:
-Files are saved on Team OneDrive server
+Files are saved on Team OneDrive server or GitHub
+
 
    
 ## Results: 
