--- a/Lab-notebook/LN02.md
+++ b/Lab-notebook/LN02.md
@@ -9,7 +9,7 @@ To detect and fix any sequencing errors, and to cluster the sequences into respe
 ## Material: 
 1. QIIME2 
 2. demux_seqs.qzv (/HIV)
-3. hiv_metadata.tsv (/mnt/datasets/project_2/hiv)
+3. hiv_metadata.tsv (/mnt/datasets/project_2/hiv/hiv_metadata.tsv)
 
 
 ## Method:
@@ -19,11 +19,45 @@ To detect and fix any sequencing errors, and to cluster the sequences into respe
 4. Visualize the ASVs by converting qza files to qzv.
 5. Transfer the visualization files to local computer and view the representative sequences and table.qzv using view.QIIME2.org
 
+## Our team work:
+* Susana did the main task, Tien helped with troubleshooting and ran 251nts truncation.
+* Truncation: tried it with 243nts or 251nts, we ended up going with 243nts truncation
+* Fraction of codes, more details can be viewed in the file itself (attached below):
+### Running jobs in the background
+screen -S Susana_243
+screen -S tien-denoise
+
+### Determine ASVs with DADA2
+Truncating with 251 nts:
+
+qiime dada2 denoise-single \
+  --i-demultiplexed-seqs demux_seqs.qza \
+  --p-trim-left 0 \
+  --p-trunc-len 251 \
+  --o-representative-sequences rep-seqs.qza \
+  --o-table table.qza \
+  --o-denoising-stats stats.qza
+
+Truncating with 243 nts:
+nohup qiime dada2 denoise-single \
+  --i-demultiplexed-seqs demux_seqs.qza \
+  --p-trim-left 0 \
+  --p-trunc-len 243 \
+  --o-representative-sequences rep-seqs.qza \
+  --o-table table.qza \
+  --o-denoising-stats stats.qza > dada2_output.log 2>&1 &
+
+
+
    
 ## Code: 
 *QIIME2-Analysis/QIIME2-Data-Processing-Script.R
 ## Output files:
 Files are saved on Team OneDrive server or GitHub
+243_stats.qzv
+stats251.qzv
+rep-seqs251.qzv
+243_rep-seqs.qzv
 
 
    
