--- a/Lab-notebook/LN02.md
+++ b/Lab-notebook/LN02.md
@@ -53,11 +53,8 @@ nohup qiime dada2 denoise-single \
 ## Code: 
 *QIIME2-Analysis/QIIME2-Data-Processing-Script.R
 ## Output files:
-Files are saved on Team OneDrive server or GitHub
-243_stats.qzv
-stats251.qzv
-rep-seqs251.qzv
-243_rep-seqs.qzv
+Files are saved on Team OneDrive server or [GitHub](/QIIME2-Analysis/Qiime-output-files)
+(table.qzv, stats251.qzv, rep-seqs251.qzv, 243_rep-seqs.qzv)
 
 
    
