--- a/Lab-notebook/LN01.md
+++ b/Lab-notebook/LN01.md
@@ -33,7 +33,7 @@ The same result is generated from samples sequenced from both forward and revers
 5. All the reads the same length of  bp
 
 Sequence counts
-> <img src="..." height="200">
+> <img src="/QIIME2-Analysis/Figures/Demultiplexed sequence counts summary.png" height="200">
 
 Sequence lengths
 > <img src="..." height="300">
