--- a/Lab-notebook/LN01.md
+++ b/Lab-notebook/LN01.md
@@ -36,7 +36,7 @@ Sequence counts
 > <img src="/QIIME2-Analysis/Figures/Demultiplexed sequence counts summary.png" height="200">
 
 Sequence lengths
-> <img src="..." height="300">
+> <img src="/QIIME2-Analysis/Figures/Demultiplexed sequence length summary.png" height="300">
 
 Attached images are generated from [https://view.qiime2.org/](https://view.qiime2.org/)
 
