--- a/Lab-notebook/LN01.md
+++ b/Lab-notebook/LN01.md
@@ -26,11 +26,9 @@ demultiplexed samples
    
 ## Results: 
 The same result is generated from samples sequenced from both forward and reverse primers
-1. Total number of reads:  
+1. Total number of reads: 15196977
 2. Total number of samples: 281
-3. Range of sequencing depth: 
-4. Maximum read length (bp): 
-5. All the reads the same length of  bp
+3. Maximum read length (bp): 131259
 
 Sequence counts
 > <img src="/QIIME2-Analysis/Figures/Demultiplexed sequence counts summary.png" height="200">
