--- a/Lab-notebook/LN03.md
+++ b/Lab-notebook/LN03.md
@@ -1,1 +1,50 @@
 
+# LN03 - Taxonomic Analysis
+
+Macrh 1st, 2025
+
+## Purpose:
+To determine the taxonomic groups to which the ASVs correspond to, and to generate a taxonomy bar plot that illustrates the relative frequency of each taxonomic group. To perform taxonomy-based filtering and remove any mitochondria or chloroplast sequences.
+
+## Material: 
+1. QIIME2 
+2. 243-rep_seqs.qzv (/HIV)
+3. hiv_metadata.tsv (/mnt/datasets/project_2/hiv/hiv_metadata.tsv)
+4. silva-138-99-515-806-nb-classifier.qza (/mnt/datasets/classifiers)
+3. 243_table.qza (/HIV)
+
+
+
+## Method:
+1. Connect to Cisco Anyconnect Secure VPN. Open the terminal and login to MICB 475 class server using the provided login credentials.
+2. Create a detached screen and name it "taxonomic analysis". 
+3. Align the database.
+4. Visualize the taxonomy by converting qza files to qzv.
+5. Generate the taxonomy bar plot.
+6. Transfer the taxonomy and taxonomy bar plot visualization files to local computer and view the taxon using view.QIIME2.org.
+7. If mitochondria or chloroplast taxons are present, perform taxonomic-based filtering to remove these sequences and generate a new table.
+8. Summarize the table without mitochondria and chloroplast.
+9. Visualize the table without mitochondria and chloroplast by converting qza file to qzv.
+10. Transfer the table without mitochondria and chloroplast to local computer and view the table using view.QIIME2.org.
+
+## Our team work:
+
+
+### Determine ASVs with DADA2
+
+
+
+   
+## Code: 
+*QIIME2-Analysis/QIIME2-Data-Processing-Script.R
+## Output files:
+Files are saved on Team OneDrive server or [GitHub](/QIIME2-Analysis/Qiime-output-files)
+
+
+
+   
+## Results: 
+* Taxonomic analysis was completed
+
+## Discussion:
+* Materials are now ready to make phyloseq object and move onto aim 1
