--- a/Lab-notebook/LN03.md
+++ b/Lab-notebook/LN03.md
@@ -28,7 +28,22 @@ To determine the taxonomic groups to which the ASVs correspond to, and to genera
 10. Transfer the table without mitochondria and chloroplast to local computer and view the table using view.QIIME2.org.
 
 ## Our team work:
+#Export to RStudio
 
+#export taxonomy
+qiime tools export \
+--input-path /HIV/243_taxonomy.qza \
+--output-path taxonomy_export 
+
+#export feature-table.txt
+qiime tools export \
+--input-path /HIV/243_table.qza \
+--output-path table_export 
+
+#export rooted tree 
+qiime tools export \
+--input-path /HIV/243_rooted-tree.qza \
+--output-path rooted_tree_expor
 
 ### Determine ASVs with DADA2
 
