--- a/Lab-notebook/LN05.md
+++ b/Lab-notebook/LN05.md
@@ -9,30 +9,31 @@ To rarefy the phlyoseq object to match with our general data processing step on 
 
 ## Material: 
 1. RStudio
-2. QIIME2 
-3. tree.nwk
-4. table-hiv.txt
-5. hiv_metadata.tsbv
-6. taxonomy.tsv
+2. HIV_rare
 
 ## Method:
-1. Connect to Cisco Anyconnect Secure VPN. Open the terminal and login to MICB 475 class server using the provided login credentials.
-2. Convert taxonomy, otu table, and phylogenic tree to appropriate format for RStudio use.
-3. Move the converted files to your local computer directory and view it using the QIIME2
-4. Convert files to phyloseq objects with appropriate filtering
-5. remove samples less than 100 reads, ASVs < 5 counts, mitochondrial/choloroplasts sequences, and remove NAs
-6. Rarefy phyloseq object to appropriate read length done in QIIME2 (12,082)
+1. Alpha and beta diversity analyses were done on RStudio (15).
+2. The following packages were loaded to perform alpha and beta diversity analyses: phyloseq, ape, tidyverse, picante, ggsignif, ggplot2, vegan, and “car” (14, 16–20)
+3. Alpha diversity was performed among labor type, education level, age visit, and HIV Status.
+4. Associated Kruskal-Wallis and log-transformed analysis of variance (ANOVA) statistical tests were performed using the ggsignif package (19).
+5. Faith’s Phylogenetic Diversity (PD) was used to measure richness using the phyloseq package (14).
+6. To measure evenness, Shannon was first calculated using phyloseq and then used to calculate Pielou’s Evenness. Shannon values were calculated to perform Pielou’s Evenness.
+7. Beta diversity was assessed using the phyloseq, ggplot2, and ggsignif packages (14, 19, 21).
+8. Principal coordinates analysis (PCoA) plots were generated using Weighted UniFrac diversity metrics (22).
+9. Permutational multivariate analysis of variance (PERMANOVA) and pairwise PERMANOVA statistical significance tests were performed using the vegan package (20, 23).
 
 ## Code: 
-* [RStudio code](/RStudio/Aim1/Phyloseq-conversion.Rmd)
+* [RStudio code](/RStudio/Aim1/alpha-beta-labortype.Rmd)
 * QIIME2 codes were applied from MICB 475 lecture
 ## Output files:
 Files are saved on Team OneDrive server
-GitHub:[HIV_final](/RStudio/Aim1/hiv_final.RData)
-| [HIV_rare](/RStudio/Aim1/hiv_rare.RData)
-   
+Various plots of alpha and beta diversity can be viewed [here](/RStudio/Figures)
+
 ## Results: 
-* Phyloseq object is converted 
+* Most metrics are not significantly different, except for pielou's eveness of age
+* Pielou's
+    * Violin plot:
+      > <img src="/RStudio/Figures/plot_pie_pos_age.png" height="300">
 
 ## Discussion:
-* Materials are now ready to perform alpha beta diversity analysis for aim 1
+* This summed up our aim 1 and we moved on to continnue to test the same variables for aim 2 and 3
