--- a/Lab-notebook/LN05.md
+++ b/Lab-notebook/LN05.md
@@ -23,6 +23,7 @@ To rarefy the phlyoseq object to match with our general data processing step on 
 9. Permutational multivariate analysis of variance (PERMANOVA) and pairwise PERMANOVA statistical significance tests were performed using the vegan package (20, 23).
 
 ## Code: 
+This was done by multiple teammates and other codes can be viewed in the same folder
 * [RStudio code](/RStudio/Aim1/alpha-beta-labortype.Rmd)
 * QIIME2 codes were applied from MICB 475 lecture
 ## Output files:
