--- a/Lab-notebook/LN03.2.md
+++ b/Lab-notebook/LN03.2.md
@@ -18,12 +18,30 @@ To determine the taxonomic groups to which the ASVs correspond to, and to genera
 1. Connect to Cisco Anyconnect Secure VPN. Open the terminal and login to MICB 475 class server using the provided login credentials.
 2. Generate a tree for phylogenetic diversity analyses.
 3. View the table to see maximum frequency in order to determine max depth for the alpha-rarefaction.
-3. Generate alpha-rarefaction curve with a max depth of 60 000.
-4. Transfer the alpha-rarefaction file to local computer and view the alpha-rarefaction curve using view.QIIME2.org.
+3. Generate alpha-rarefaction curve with a max depth of 89000.
+4. Chosen sampling depth is 12082
+5. Transfer the alpha-rarefaction file to local computer and view the alpha-rarefaction curve using view.QIIME2.org.
 
    
 ## Our team work:
+# Alpha-rarefaction curve:
 
+qiime diversity alpha-rarefaction \
+  --i-table 243_table.qza \
+  --i-phylogeny 243_rooted-tree.qza \
+  --p-max-depth 89000 \
+  --m-metadata-file /mnt/datasets/project_2/hiv/hiv_metadata.tsv \
+  --o-visualization alpha-rarefaction.qzv
+
+
+# Determining alpha- and beta-diversity metrics:
+
+qiime diversity core-metrics-phylogenetic \
+  --i-phylogeny 243_rooted-tree.qza \
+  --i-table table-no-mitochondria-no-chloroplast.qza \
+  --p-sampling-depth 12082 \
+  --m-metadata-file /mnt/datasets/project_2/hiv/hiv_metadata.tsv \
+  --output-dir 12082-core-metrics-results
 
 
    
@@ -37,6 +55,8 @@ Files are saved on Team OneDrive server or [GitHub](/QIIME2-Analysis/Qiime-outpu
    
 ## Results: 
 * Alpha rarefaction was completed
+* Alpha-rarefaction graph
+> <img src="/QIIME2-Analysis/Figures/rarefraction curve.png" height="500">
 
 ## Discussion:
-* Materials are now ready to make phyloseq object and move onto aim 1
+* Materials are now ready to move onto aim 1
