--- a/Lab-notebook/LN07.md
+++ b/Lab-notebook/LN07.md
@@ -24,9 +24,8 @@ Files are saved on Team OneDrive server or [GitHub](/RStudio/Figures)
 
 
 ## Results: 
-
-
-
+ISA table:
+> <img src="/RStudio/Figures/Screenshot 2025-04-14 113914.png" height="500">
 
 ## Discussion:
 * Education has some interesting unique species and stood out from the rest
