--- a/Lab-notebook/LN02.md
+++ b/Lab-notebook/LN02.md
@@ -51,7 +51,7 @@ nohup qiime dada2 denoise-single \
 
    
 ## Code: 
-*QIIME2-Analysis/QIIME2-Data-Processing-Script.R
+[code](/QIIME2-Analysis/QIIME2-Data-Processing-Script.md)
 ## Output files:
 Files are saved on Team OneDrive server or [GitHub](/QIIME2-Analysis/Qiime-output-files)
 (table.qzv, stats251.qzv, rep-seqs251.qzv, 243_rep-seqs.qzv)
