--- a/Lab-notebook/LN03.2.md
+++ b/Lab-notebook/LN03.2.md
@@ -46,7 +46,7 @@ qiime diversity core-metrics-phylogenetic \
 
    
 ## Code: 
-*QIIME2-Analysis/QIIME2-Data-Processing-Script.R
+[code](/QIIME2-Analysis/QIIME2-Data-Processing-Script.md)
 ## Output files:
 Files are saved on Team OneDrive server or [GitHub](/QIIME2-Analysis/Qiime-output-files)
 
