--- a/Lab-notebook/LN03.md
+++ b/Lab-notebook/LN03.md
@@ -51,7 +51,7 @@ qiime tools export \
 
    
 ## Code: 
-*QIIME2-Analysis/QIIME2-Data-Processing-Script.R
+[code](/QIIME2-Analysis/QIIME2-Data-Processing-Script.md)
 ## Output files:
 Files are saved on Team OneDrive server or [GitHub](/QIIME2-Analysis/Qiime-output-files)
 
